deploy/kube/app/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: webslab-app-dp

spec:
  template:
    spec:
      containers:
        - name: webslab-server
