deploy/kube/app/overlays/prod/ingress.yaml
apiVersion: traefik.io/v1alpha1 # or traefik.io/v1alpha1
kind: Middleware

metadata:
  name: webslab-app-mid

spec:
  redirectRegex:
    regex: "^(https?://)www\\.ipsitec\\.es(.*)" # Specific to www.ipsitec.es
    replacement: "${1}ipsitec.es${2}"
    permanent: true

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: webslab-app-ing
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/issuer: webslab-infra-issuer
    traefic.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: webslab-foo-webslab-app-mid-prod@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ipsitec.es
        - www.ipsitec.es
      secretName: webslab-app-base-ing

  rules:
    - host: ipsitec.es
      http:
        paths:
          - path: /ecliptic
            pathType: Prefix
            backend:
              service:
                name: webslab-app-svc
                port:
                  number: 80

    - host: www.ipsitec.es
      http:
        paths:
          - path: /ecliptic
            pathType: Prefix
            backend:
              service:
                name: webslab-app-svc
                port:
                  number: 80
